--- a/_layouts/keynote.html
+++ b/_layouts/keynote.html
@@ -45,13 +45,13 @@ layout: default
 
                 {% if site.disqus_username %}
                 <!-- disqus 评论框 start -->
-                <div class="comment">
-                    <div id="disqus_thread" class="disqus-thread">
+                <!--<div class="comment">-->
+                    <!--<div id="disqus_thread" class="disqus-thread">-->
 
-                    </div>
-                </div>
+                    <!--</div>-->
+                <!--</div>-->
                 <!-- disqus 评论框 end -->
-                {% endif %}
+                <!--{% endif %}-->
 
             </div>
 
