--- a/_layouts/keynote.html
+++ b/_layouts/keynote.html
@@ -41,9 +41,9 @@ layout: default
                     </li>
                     {% endif %}
                 </ul>
-                <hr style="visibility: hidden;">
+                <!--<hr style="visibility: hidden;">-->
 
-                {% if site.disqus_username %}
+                <!--{% if site.disqus_username %}-->
                 <!-- disqus 评论框 start -->
                 <!--<div class="comment">-->
                     <!--<div id="disqus_thread" class="disqus-thread">-->
