--- a/_layouts/keynote.html
+++ b/_layouts/keynote.html
@@ -95,7 +95,7 @@ layout: default
 </script>
 
 
-{% if site.disqus_username %}
+<!-- {% if site.disqus_username %}
 <!-- disqus 公共JS代码 start (一个网页只需插入一次) -->
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES * * */
@@ -110,7 +110,7 @@ layout: default
     })();
 </script>
 <!-- disqus 公共JS代码 end -->
-{% endif %}
+{% endif %} -->
 
 
 {% if site.anchorjs %}
