--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -48,7 +48,7 @@ layout: default
                 </ul>
                 <hr style="visibility: hidden;">
 
-                {% if site.disqus_username %}
+<!--                 {% if site.disqus_username %}
                 <!-- disqus 评论框 start -->
                 <div class="comment">
                     <div id="disqus_thread" class="disqus-thread"></div>
@@ -60,7 +60,7 @@ layout: default
                 <!-- 网易云跟帖 评论框 start -->
                 <div id="cloud-tie-wrapper" class="cloud-tie-wrapper"></div>
                 <!-- 网易云跟帖 评论框 end -->
-                {% endif %}
+                {% endif %} -->
             </div>  
 
     <!-- Side Catalog Container -->
@@ -118,7 +118,7 @@ layout: default
 {% endif %}
 
 
-{% if site.disqus_username %}
+<!-- {% if site.disqus_username %}
 <!-- disqus 公共JS代码 start (一个网页只需插入一次) -->
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES * * */
@@ -133,7 +133,7 @@ layout: default
     })();
 </script>
 <!-- disqus 公共JS代码 end -->
-{% endif %}
+{% endif %} -->
 
 
 {% if site.anchorjs %}
